# Aegis

./: .gitignore  BENCHMARKING.md  Makefile  README.md  run_benchmarks.sh
.github/workflows/: ci.yml
agent/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.agent  README.md  build.rs  config.toml
agent/src/: benchmark.rs  bpf.rs  cap.rs  config.rs  grpc_server.rs  hostname_to_ip.rs  main.rs
agent/src/bpf/: aegis.bpf.c  aegis.h
controller/: .gitignore  API_DOCS.md  CONTROLLER_DOCS.md  Dockerfile.controller  README.md  config.toml  go.mod  go.sum  main.go  main_test.go
controller/config/: config.go  config_test.go
controller/data/: aegis.db  init.sql  migrate_v1_0_to_v1_1.sql  migrate_v1_1_1_to_v1_2.sql  migrate_v1_1_to_v1_1_1.sql
controller/database/: database.go  database_test.go  init.sql
controller/internal/grpc/: grpc.go
controller/internal/handler/: auth_handler.go  auth_handler_test.go  oidc_handler.go  oidc_handler_test.go  role_handler.go  role_handler_test.go  service_handler.go  service_handler_test.go  test_helpers.go  user_handler.go  (+1 more)
controller/proto/: proto.go  proto_test.go  session.pb.go  session_grpc.pb.go
controller/server/: auth_handler.go  auth_handler_test.go  middleware.go  middleware_test.go  oidc_handler.go  oidc_handler_test.go  roles_handler.go  roles_handler_test.go  route.go  service_handler.go  service_handler_test.go  test_helpers.go  user_dashboard_handler.go  user_handler.go  user_handler_test.go
deploy/: aegis-cli.sh  docker-compose.test-ip-change.yml  docker-compose.yml  generate-certs.sh
proto/: session.proto
(+33 files in other folders)
