[package]
name = "aegis-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.27", features = ["net"] }
caps = "0.5"
bytemuck = "1.24"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"

[build-dependencies]
libbpf-cargo = "0.25"
tonic-build = "0.14"
tonic-prost-build = "0.14"
